--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,10 @@
 #
 default: &default
   adapter: postgresql
+  # adapter: sqlite3
   pool: 5
   timeout: 5000
+  host: localhost
 
 development:
   <<: *default
